fixed spacing in add goals

--- a/frontend/src/Components/Dashboard/User/Add.css
+++ b/frontend/src/Components/Dashboard/User/Add.css
@@ -34,6 +34,9 @@
 
 .add-content-container {
   padding: 16px 20px;
+    display: flex;
+    flex-direction: column;
+    gap: 1vh;
 }
 
 .add-container {
